edit: revisi bagian axios sesi 1

--- a/src/content/docs/Axios/Sesi1.mdx
+++ b/src/content/docs/Axios/Sesi1.mdx
@@ -5,11 +5,9 @@ title: Pengenalan Axios
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { Code } from '@astrojs/starlight/components';
 
-Bayangkan Anda memiliki sebuah toko online. Ketika ada pelanggan yang ingin melihat daftar produk, atau ingin melakukan pembayaran, toko Anda perlu "mengirim" atau "menjemput" informasi dari gudang data (server).
+Bayangkan aplikasi Anda sebagai etalase toko online. Saat pelanggan ingin melihat daftar produk atau memproses pembayaran, **_aplikasi perlu bertukar informasi dengan server_**.
 
-Nah, di dunia pemrograman, proses "mengirim" dan "menjemput" informasi ini dilakukan melalui permintaan HTTP (Hypertext Transfer Protocol).
-
-Axios adalah seperti "kurir super cepat" yang tugasnya khusus mengantarkan dan menjemput "paket" data (permintaan HTTP dan respons HTTP) antara aplikasi Anda dengan server.
+Di dunia pemrograman, pertukaran informasi ini dilakukan melalui **HTTP Request**. **Axios** berperan sebagai **_kurir handal_** yang menyederhanakan proses pengiriman permintaan (**request**) dan penerimaan jawaban (**response**) data antara aplikasi dan server Anda
 
 ## Beberapa hal penting tentang Axios:
 
